# raspberrypi-spotify

./: .gitignore  CMakeLists.txt  README.md  rasp-spot.service
src/: main.cpp
src/modules/: Observer.h  Subject.h
src/modules/ColorParser/: ColorParser.cpp  ColorParser.h
src/modules/DBusListener/: DBusListener.cpp  DBusListener.h
src/modules/WS-server/: WSServer.cpp  WSServer.h
src/web/: code.js  config.js  index.html  styles.css
